# wdb

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
include/libwdb/: bit.h  error.h  libwdb.h  pipe.h  process.h  register_info.h  registers.h  types.h
src/: CMakeLists.txt  libwdb.cpp  pipe.cpp  process.cpp  register.cpp  registers.cpp
test/: CMakeLists.txt  wdbtests.cpp
test/targets/: CMakeLists.txt  reg_write.s  run_endlessly.cpp
tools/: CMakeLists.txt  wdbcli.cpp
wiki/: howto-build.md  libedit-vcpkg-installation.md
